<resources>
    <string name="app_name">DAMEP_MarcaniIslaPascacio</string>
    <string name="txtnombreapellido" />
    <string name="txtcorreo" />
    <string name="txtclave" />
    <string name="txttelefono" />
    <string name="txtfecha" />
    <string name="zonaResidenciaValue">ResidenciaValue</string>
    <string name="personaViviendaValue" />
    <string name="promedioFamiliaValue" />
    <string name="opinionSobreBonosValue" />
</resources>